--- a/style.css
+++ b/style.css
@@ -1,19 +1,135 @@
 
 html{
-    background: white;
+    background:  #f5f5f5;
     color:rgb(0, 0, 0);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
 a{
-    color: black;
+    color: white;
+    text-decoration: none;
 }
 
-footer{
-    background: black;
-    padding: 20px 20px;
-    color:rgb(129, 158, 158);
+.kopf {
     text-align: center;
-    font-size: 12px;;
+    color: #53595f;
 }
+
+.kopf-text {
+    color: black;
+    text-align: center;
+}
+
+.boxes {
+    display: flex;
+    justify-content: space-around;
+    margin: 1%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+
+.box {
+    background-color: #53595f;;
+    color: white;
+    font-size: 1.5em;
+    width: 25%;
+    padding: 2%;
+    margin: 0% auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-decoration: none;
+    transition: /*background-color*/transform 0.3s ease-in-out;
+}
+
+.box:hover {
+    /*background-color: #464a4e;*/
+    transform:scale(110%)
+}
+
+header h1 {
+    font-size: 2.5em;
+    margin: 0;
+    padding: 10px 0;
+}
+
+header p {
+    font-size: 1.2em;
+    color: #555;
+}
+
+.welcome-section {
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 1%;
+    background-color: #53595f;
+    color:white;
+    width: 91.5%;
+    margin: 0px auto;
+    justify-content: space-around;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+
+.footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 10%;
+    background-color: #53595f;
+    color: white;
+    text-align: center;
+    padding: 40px 40px;
+    border-radius: 10px;
+    width: 89.75%;
+    margin: auto;
+    }
+
+.footer-left, .footer-center, .footer-right {
+        flex: 1;
+    }
+    
+.footer-left {
+        text-align: left;
+    }
+    
+.footer-center {
+        text-align: center;
+    }
+    
+.footer-right {
+        text-align: right;
+    }
+    .footer-bottom {
+        font-size: small;
+        text-align: center;
+        margin-top: 10px;
+        color:#777e85
+    }
+    @media screen and (max-width: 768px) {
+        .footer {
+            flex-direction: column;
+        }
+
+        .boxes {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .box {
+            width: 80%;
+            margin-bottom: 20px;
+        }
+        
+        .welcome-section {
+            align-items: center;
+            flex-direction: column;
+        }
+
+    }
