--- a/VORLAGE_ANLEITUNGEN.css
+++ b/VORLAGE_ANLEITUNGEN.css
@@ -23,7 +23,7 @@ a:hover{
     font-size:110%;
 }
 
-section.kapitel1{
+section.kapitel{
     font-size:medium;
     padding-inline-start: 02%;
 }
@@ -43,6 +43,7 @@ section.image-and-text{
 .image-container {
     width: 70%; /* Bild bekommt nur die notwendige Breite */
     margin-right: -10%; /* Minimaler Abstand zwischen Bild und Text */
+    padding-left: 2%;
 }
 
 .text-container {
@@ -64,6 +65,7 @@ ol.list {
 
 
 .footer{
+    margin-top: 2%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
