--- a/VORLAGE_ANLEITUNGEN.css
+++ b/VORLAGE_ANLEITUNGEN.css
@@ -12,11 +12,26 @@ a{
     transition: .5s;
 }
 
-h2{
-    padding-inline-start: 01%;
-    font-style:italic;
-    /* color:rgb(66, 76, 121) */
+h1 {
+    text-align: center;
+    text-decoration: underline;
+}
 
+h2{
+    padding-inline-start: 0%;
+    font-size:xx-large;
+    font-style:normal;/*italic;*/
+    /* color:rgb(66, 76, 121) */
+}
+
+h3 {
+    font-style: italic;
+    padding-inline-start: 0%;
+    font-size: x-large;
+}
+
+fließtext {
+    margin-inline-start: 1%;
 }
 
 a:hover{
@@ -25,7 +40,7 @@ a:hover{
 
 section.kapitel{
     font-size:medium;
-    padding-inline-start: 02%;
+    padding-inline-start: 01%;
 }
 
 section.link-container{
@@ -43,14 +58,15 @@ section.image-and-text{
 .image-container {
     width: 70%; /* Bild bekommt nur die notwendige Breite */
     margin-right: -10%; /* Minimaler Abstand zwischen Bild und Text */
-    padding-left: 2%;
+    padding-left: 1%;
+    
 }
 
 .text-container {
     width: 100%; /* Text nimmt den Platz neben dem Bild ein */
     text-align: left;
     margin: 0; /* Keine zusätzliche Polsterung */
-    padding: 0
+    padding: 0   
 }
 
 ol.list {
