--- a/style.css
+++ b/style.css
@@ -50,10 +50,28 @@ a{
     transform:scale(110%)
 }
 
+header{
+    background-image:url("images/Techniklogo.png");
+    /*braucht noch ein anderes foto*/
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center;
+    padding: 20px 40px;
+    /*text-align: center;*/
+    height: 100%;
+}
+
 header h1 {
     font-size: 2.5em;
     margin: 0;
     padding: 10px 0;
+    background-color: black;
+    opacity:50%;
+    color:white;
+    padding:30px;
+    text-transform: uppercase;
+    margin-top: 20%;
+   
 }
 
 header p {
