--- a/VORLAGE_ANLEITUNGEN.css
+++ b/VORLAGE_ANLEITUNGEN.css
@@ -138,3 +138,52 @@ figcaption{
         flex-direction: column;
     }
 }
+
+nav{
+    width: 100%;
+    height: 85px;
+    background-color: white;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1)
+}
+
+nav ul{
+    float:center;
+}
+
+nav ul li{
+    float:left;
+    list-style:none;
+    position: relative;
+}
+
+nav ul li a{
+    color:#555;
+    padding:20px;
+    display:block;
+}
+
+nav ul li a:hover{
+    background-color:rgb(219, 219, 219);
+}
+
+nav ul li ul{
+    display:none;
+    position:absolute;
+    background-color: #777e85;
+    padding:7px;
+    border-radius: 0px 0px 12px 12px;
+}
+
+nav ul li:hover ul{
+    display: block;
+}
+
+nav ul li ul li a{
+    color:white;
+    padding: 16px 20px;
+    border-radius: 10px;
+}
+
+nav ul li ul li a:hover{
+    background-color: #53595f;
+}
