--- a/VORLAGE_ANLEITUNGEN.css
+++ b/VORLAGE_ANLEITUNGEN.css
@@ -142,14 +142,78 @@ figcaption{
 }
 
 nav{
+    position: relative;
+    
+}
+
+nav a:hover{
+    font-size: 100%;
+}
+
+.menu-icon{
+    font-size: 30px;
+    color: rgb(93, 93, 93);
+    padding: 15px;
+    cursor: pointer;
+}
+
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #686868;
+    
+}
+
+ul.show-menu {
+    display: block;
+}
+
+nav ul.dropdown-menu li {
+    position: relative;
+    
+}
+
+nav ul.dropdown-menu li a {
+    display: block;
+    padding: 15px 20px;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    background-color: #676767;
+    transition: background-color 0.3s ease;
+}
+
+nav ul.dropdown-menu li a:hover {
+    background-color: #7e7e7e;
+}
+
+nav ul.dropdown-menu li .submenu {
+    display: none;
+    position: absolute;
+    left: 100%;
+    top: 0;
+    background-color: #e5e5e5;
+}
+
+nav ul.dropdown-menu li:hover > .submenu {
+    display: block;
+}
+
+/*nav{
     width: 100%;
     height: 85px;
     background-color: white;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1)
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 nav ul{
     float:center;
+    display:flex;
+    justify-content: space-around;
 }
 
 nav ul li{
@@ -177,7 +241,8 @@ nav ul li ul{
 }
 
 nav ul li:hover ul{
-    display: block;
+    display: inline-block;
+    align-items: right;
 }
 
 nav ul li ul li a{
@@ -188,4 +253,4 @@ nav ul li ul li a{
 
 nav ul li ul li a:hover{
     background-color: #53595f;
-}
+}*/
